--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">DashCam+</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_settings">Settings</string>
+    <string name="action_settings">Ustawienia</string>
+    <string name="title_activity_settings">Ustawienia</string>
 
 
     <!-- Strings related to Speedometer -->
@@ -32,9 +32,9 @@
         <item>-1</item>
     </string-array>
     <string-array name="settings_lista_czy_pokazywac_predkosc">
-    <item>Tak</item>
-    <item>Nie</item>
-</string-array>
+        <item>Tak</item>
+        <item>Nie</item>
+    </string-array>
     <string-array name="settings_lista_czy_pokazywac_predkosc_values">
         <item>0</item>
         <item>-1</item>
